# CGFinalProject

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: Booth.cpp  Booth.h  CubeGroup.cpp  CubeGroup.h  CubeGroupYellow.cpp  CubeGroupYellow.h  Ground.cpp  Ground.h  GroundBlock.cpp  GroundBlock.h  LightingCube.cpp  LightingCube.h  LightingCubeYellow.cpp  LightingCubeYellow.h  MagmaBlock.cpp  MagmaBlock.h  ObjFileObject.cpp  ObjFileObject.h  Particles.cpp  Particles.h  base.cpp  base.h  bricks.cpp  bricks.h  exampleCube.cpp  exampleCube.h  exampleTriangle.cpp  exampleTriangle.h  floor.cpp  floor.h  planet.cpp  planet.h  renderObject.cpp  renderObject.h  renderProcess.cpp  renderProcess.h  skybox.cpp  skybox.h
src/learnopengl/: shader_s.h
src/shaders/: 5.1.parallax_mapping.frag  magma.frag  particle.frag
src/utils/: camera.h  filesystem.h  mesh.h  model.h  shader.h
